chore: .gitignore 미작동 문제 해결,,?

--- a/data/scraping/attraction_per_area_code.ipynb
+++ b/data/scraping/attraction_per_area_code.ipynb
@@ -74,22 +74,21 @@
         "# 3. 테이블 재생성\n",
         "cursor.execute(\"\"\"\n",
         "CREATE TABLE attractions (\n",
-        "\tid INT PRIMARY KEY AUTO_INCREMENT,\n",
-        "\taddr1 VARCHAR(100) NOT NULL DEFAULT \"\",\n",
-        "\taddr2 VARCHAR(100) NOT NULL DEFAULT \"\",\n",
-        "\tarea_code INT NOT NULL,\n",
-        "\tcategory_1 CHAR(3),\n",
-        "\tcategory_2 CHAR(5),\n",
-        "\tcategory_3 CHAR(9),\n",
-        "\tcontent_id INT NOT NULL,\n",
-        "\tcontent_type_id INT NOT NULL,\n",
-        "\tfirst_image VARCHAR(200) NOT NULL DEFAULT \"\",\n",
-        "\tsecond_image VARCHAR(200) NOT NULL DEFAULT \"\",\n",
-        "\tlongitude FLOAT NOT NULL,\n",
-        "\tlatitude FLOAT NOT NULL,\n",
-        "\tsigungucode CHAR(3) NOT NULL DEFAULT \"\",\n",
-        "\ttel VARCHAR(100),\n",
-        "\ttitle VARCHAR(100)\n",
+        "    id              INT PRIMARY KEY NOT NULL,\n",
+        "    addr1           VARCHAR(100)    NOT NULL DEFAULT '',\n",
+        "    addr2           VARCHAR(100)    NOT NULL DEFAULT '',\n",
+        "    area_code       INT             NOT NULL,\n",
+        "    category_1      CHAR(3),\n",
+        "    category_2      CHAR(5),\n",
+        "    category_3      CHAR(9),\n",
+        "    content_type_id INT             NOT NULL,\n",
+        "    first_image     VARCHAR(200)    NOT NULL DEFAULT '',\n",
+        "    second_image    VARCHAR(200)    NOT NULL DEFAULT '',\n",
+        "    longitude       FLOAT           NOT NULL,\n",
+        "    latitude        FLOAT           NOT NULL,\n",
+        "    sigungucode     CHAR(3)         NOT NULL DEFAULT '',\n",
+        "    tel             VARCHAR(100),\n",
+        "    title           VARCHAR(100)\n",
         ");\n",
         "\"\"\")\n",
         "\n",
@@ -204,7 +203,7 @@
         "TIME_WAIT_SEC = 3\n",
         "\n",
         "BASE_SQL = \"\"\"\n",
-        "INSERT INTO attractions(addr1, addr2, area_code, category_1, category_2, category_3, content_id, \n",
+        "INSERT INTO attractions(addr1, addr2, area_code, category_1, category_2, category_3, id, \n",
         "                        content_type_id, first_image, second_image, longitude, latitude,\n",
         "                        sigungucode, tel, title)\n",
         "VALUES \"\"\"\n",
